# ValidateMe

./: .gitmodules  CMakeLists.txt
src/: validateme.cpp
